app/assets/stylesheets/api/sneakers.scss
// Place all the styles related to the api/sneakers controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


.sneakerComponent {
    display: flex;
    /* flex-direction: column; */
    justify-content: space-between;
    margin: 100px auto 30px auto;
    width: 1200px;
    height: 750px;
    border: 2px solid lightgray;
    border-radius: 2px;
}

.outer-sneakerComponent {
    padding-top: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.product-details {
    text-align: center;
    padding-bottom: 100px;
    font-family: GT-Sectra-Book;
    font-size: 26px;
    width: 1000px
}

.product-details h1 {
    margin: 100px 0 20px 0;
    font-size: 35px;
    font-family: 'Arimo', sans-serif;
}

.leftShoe-pane {
    display: flex;
    position: relative;
    // padding-bottom: 50px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-right: 2px solid lightgray;
    border-top-left-radius: 50px;
    width: 770px;
    font-size: 25px;
}

.sneaker-footer {
    // padding-top: 300px;
    font-size: 16px;
    color: grey;
    flex-direction: column;
    position: absolute;
    bottom: 0;
    padding-bottom: 45px;
    // margin-top: 30px;
    justify-self: flex-end;
}

.shoePane-img {
    width: 550px;
    // margin-bottom: 300px;
}

.rightShoe-pane {
    display: flex;
    // font-family: 
    flex-direction: column;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    width: 770px;
}

.rightShoe-pane h1 {
    font-size: 50px;
    padding: 20px;
    font-family: 'Heebo', sans-serif;
}

.rightShoe-pane p {
    font-size: 18px;
    color: grey;
    letter-spacing: 1.5px;
}

.sneaker-details {
    display: flex;
    text-align: center;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 100px;
    height: 300px;
    width: 1200px;
    border-top: 2px solid lightgrey;
    border-bottom: 2px solid lightgrey;
    font-size: 20px;
    font-family: 'Heebo', sans-serif;
}

.sneaker-details p {
    font-family: 'Heebo', sans-serif;
    font-size: 14px;
    letter-spacing: 1px;
    color: silver;
    text-transform: uppercase;
}


/*SHOW ALL SNEAKERS PAGE*/

.outerSneakerdiv {
    padding-top: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.outerSneakerdiv h1 {
    margin: 120px 0 120px 0;
    font-family: 'Arimo', sans-serif;
    font-size: 45px;
}

.show-all {
    display: grid;
    // height: 90vh;
    // border: 2px solid lightgrey;
    width: 705px;
    margin-right: 400px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
}

.sneakerItem {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    text-align: center;
    padding: 4rem;
    width: 235px;
    height: 300px;
    border: 1px solid lightgrey;
}

.sneakerItem:hover {
    text-decoration: underline;
    border: 1px solid darkslategray;
}

.sneakerLink {
    text-decoration: none;
    font-family: 'Heebo', sans-serif;
    font-size: 20px;
    color: black;
}

.sneakerLink:hover {
    text-decoration: underline;
}

// .sneakerItem {
//     display: flex;
//     flex-direction: column;
//     justify-content: space-evenly;
//     align-items: center;
//     height: 350px;
// }

.sneakerItem img {
    width: 175px;
}

// .show-all {
//     // display: inline-flex;
//     width: 900px;
// }

